<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="341dp"
        android:layout_height="364dp"
        android:contentDescription="@string/descripcion_uno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        app:srcCompat="@drawable/fallenstars" />

    <TextView
        android:id="@+id/albumTExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/groupsText"
        app:layout_constraintEnd_toEndOf="@+id/albumImage"
        app:layout_constraintStart_toStartOf="@+id/albumImage"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/letraImage"
        android:layout_width="14dp"
        android:layout_height="16dp"
        android:contentDescription="@string/descripcion_dos"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/groupsText"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/progresion"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.808"
        app:srcCompat="@drawable/music" />

    <ImageView
        android:id="@+id/colaImagen"
        android:layout_width="12dp"
        android:layout_height="17dp"
        android:contentDescription="@string/descripcion_tres"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/progresion"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toEndOf="@+id/groupsText"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.822"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/groupsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/progresion"
        app:layout_constraintEnd_toEndOf="@+id/albumTExt"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/albumTExt"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.412" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comoVa"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/progresion"
        app:layout_constraintEnd_toEndOf="@+id/letraImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/letraImage"
        app:layout_constraintTop_toBottomOf="@+id/groupsText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:text="@string/cancionTiempo"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/progresion"
        app:layout_constraintEnd_toEndOf="@+id/colaImagen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/colaImagen"
        app:layout_constraintTop_toBottomOf="@+id/groupsText"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <SeekBar
        android:id="@+id/progresion"
        android:layout_width="367dp"
        android:layout_height="35dp"
        android:indeterminate="false"
        android:progress="25"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FFFFFF"
        android:thumbTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/descripcion_cuatro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siguiente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/anterior"
        app:layout_constraintTop_toBottomOf="@+id/progresion"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@drawable/playcircle"
        tools:ignore="TouchTargetSizeCheck"
        tools:srcCompat="@drawable/playcircle" />

    <ImageView
        android:id="@+id/siguiente"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:contentDescription="@string/descripcion_cinco"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/progresion"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/stepforward" />

    <ImageView
        android:id="@+id/anterior"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:contentDescription="@string/descripcion_seis"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progresion"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/stepbackward" />

    <SeekBar
        android:id="@+id/volumen"
        android:layout_width="196dp"
        android:layout_height="24dp"
        android:progress="75"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#FFFFFF"
        android:thumbTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/albumImage"
        app:layout_constraintEnd_toEndOf="@+id/albumImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:contentDescription="@string/descripcion_siete"
        app:layout_constraintBottom_toTopOf="@+id/albumImage"
        app:layout_constraintEnd_toStartOf="@+id/volumen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/albumImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        app:srcCompat="@drawable/sharealtsquare" />

</androidx.constraintlayout.widget.ConstraintLayout>